fixing spacing in add

--- a/add-workout.css
+++ b/add-workout.css
@@ -22,7 +22,7 @@ textarea {
 .workout-detail {
     text-align: center;
     font-size: 1.8rem;
-    width: 32%;
+    width: 30%;
 }
 
     #add-reps input {
